# bootstrap

./: .buckconfig  .gitignore  .gitmodules  BUCK  CMakeLists.txt  Makefile  README.md
ext/: CMakeLists.txt
include/arua/bootstrap/: ast.h  ptr.h
include/arua/bootstrap/ast/: exception.h  node.h  scope-nested.h  scope.h  type-array.h  type-derived.h  type-fn.h  type-number.h  type-tuple.h  type.h
src/: arua.leg  arua.peg  ast.h  cli.c  cli.cc  cmdline.cc  cmdline.h  exception.cc  exception.h  node.cc  parser.h  ptr.h  scope-nested.cc  scope.cc  test.cc  type-array.cc  type-derived.cc  type-fn.cc  type-number.cc  type-tuple.cc
src/ast/: ast-visitor.cc  ast-visitor.h  comment-doc.cc  comment-doc.h  comment-header.cc  comment-header.h  comment.cc  comment.h  decl-var.cc  decl-var.h  exception.h  module.cc  module.h  node.cc  node.h  path.cc  path.h  scope-nested.cc  scope-nested.h  scope.cc  scope.h  statement-use.cc  statement-use.h  struct-members.cc  struct-members.h  type-array.cc  type-array.h  type-derived.cc  type-derived.h  type-fn.cc  type-fn.h  type-number.cc  type-number.h  type-struct.cc  type-struct.h  type-tuple.cc  type-tuple.h  type.cc  type.h
src/parser/: arua.leg  parser.h  visitor.cc  visitor.h
test/fixture/: hello.u  logger.u
